# semver-bump-checker

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: main.rs
